# mini-rag

./: .gitignore  .pre-commit-config.yaml  .repomixignore  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
.claude/: .ck.json  metadata.json  settings.json
.claude/skills/: .install-state.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: api-server.spec  app.py  build.bat  build.sh  main.py  requirements-test.txt  requirements.txt
backend/routes/: documents.py  health.py  search.py  upload.py
backend/scripts/: download-models.py
backend/services/: chunker.py  embedder.py  pdf_parser.py  vector_store.py
backend/tests/: conftest.py  test_build_config.py  test_documents.py  test_e2e_workflow.py  test_health.py  test_search.py  test_services.py  test_upload.py
docs/: codebase-summary.md  development-roadmap.md  project-changelog.md  system-architecture.md
plans/260314-mini-rag-windows-app/: COMPLETION-PHASE-02.md  RESEARCH-INDEX.md  phase-01-project-setup.md  phase-02-python-backend.md  phase-03-react-frontend.md  phase-04-tauri-integration.md  phase-05-pyinstaller-build.md  phase-06-tauri-bundler.md  phase-07-testing.md  plan.md
plans/reports/: brainstorm-260314-mini-rag-windows-app.md  debugger-20260315-tauri-startup-timeout.md
plans/templates/: bug-fix-template.md  (+3 more)
scripts/: build-all.bat  build-all.sh
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+24 files in other folders)
