[package]
name = "mini-rag"
version = "0.1.0"
description = "Mini RAG Windows Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "mini_rag_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
reqwest = { version = "0.12", features = ["json"] }

